<resources>
    <string name="app_name">Playnearn</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_ongoing">On Going Matches</string>
    <string name="title_wallet">My Wallet</string>
    <string name="title_profile">Profile</string>
</resources>