<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.devsaidur.saidur.playnearn.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.devsaidur.saidur.playnearn.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.devsaidur.saidur.playnearn.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.devsaidur.saidur.playnearn.ui.ongoingmtch.Ongoingmtch"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_ongoingmtch" />
    <fragment
        android:id="@+id/navigation_ldokngs"
        android:name="com.devsaidur.saidur.playnearn.ui.home.ldokng.LdoKngms"
        android:label="@string/title_ongoing"
        tools:layout="@layout/fragment_ldo_kngms">

        <action
            android:id="@+id/action_navigation_ldokngs_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>